--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,11 +7,11 @@
     <title>santacrab2.github.io</title>
     <base href="/" />
     <link href="css/app.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/fonts.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="santacrab2.github.io.styles.css" rel="stylesheet" />
-    <link href ="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
+    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
 </head>
 
 <body>
